Project ChronoDesVignes {
  database_type: 'MySQL'
}

Table "edition" {
  "id" int [pk, not null, increment]
  "creation_date" datetime [not null]
  "name" varchar(40) [not null]
  "event_id" int [not null]
  "edition_date" datetime [not null]
  "first_inscription" datetimeme [not null]
  "last_inscription" datetime [not null]
  "rdv_lat" float [not null]
  "rdv_lng" float [not null]
  "description" text [not null]

  Indexes {
    event_id [name: "event_id"]
  }
}

Table "editions_parcours" {
  "edition_id" int [default: NULL]
  "parcours_id" int [default: NULL]

  Indexes {
    edition_id [name: "edition_id"]
    parcours_id [name: "parcours_id"]
  }
}

Table "event" {
  "id" int [pk, not null, increment]
  "creation_date" datetime [not null]
  "name" varchar(40) [not null]
  "createur_id" int [not null]
  "description" text [not null]

  Indexes {
    name [unique, name: "name"]
    createur_id [name: "createur_id_user_id"]
  }
}

Table "inscription" {
  "id" int [pk, not null, increment]
  "creation_date" datetime [not null]
  "user_id" int [not null]
  "event_id" int [not null]
  "edition_id" int [not null]
  "parcours_id" int [not null]
  "dossard" int [default: NULL]
  "present" tinyint(1) [not null]
  "end" varchar(10) [default: NULL]

  Indexes {
    event_id [name: "event_id"]
    parcours_id [name: "parcours_id_parcours_id"]
    edition_id [name: "edition_id_edition_id"]
    user_id [name: "user_id_user_id"]
  }
}

Table "parcours" {
  "id" int [pk, not null, increment]
  "creation_date" datetime [not null]
  "name" varchar(40) [not null]
  "event_id" int [not null]
  "description" text [not null]
  "archived" tinyint(1) [not null]
  "chronos_list" text [not null]

  Indexes {
    event_id [name: "event_id_event_id"]
  }
}

Table "passage" {
  "id" int [pk, not null, increment]
  "time_stamp" datetime [not null]
  "key_id" int [default: NULL]
  "inscription_id" int [not null]

  Indexes {
    key_id [name: "key_id_passage_key_id"]
    inscription_id [name: "inscription_id_inscription_id"]
  }
}

Table "passage_key" {
  "id" int [pk, not null, increment]
  "creation_date" datetime [not null]
  "event_id" int [not null]
  "edition_id" int [not null]
  "key" varchar(20) [not null]
  "name" varchar(40) [not null]

  Indexes {
    key [unique, name: "key"]
    event_id [name: "event_id"]
    edition_id [name: "edition_id"]
  }
}

Table "passagekey_stand" {
  "passage_key_id" int [default: NULL]
  "stand_id" int [default: NULL]

  Indexes {
    stand_id [name: "stand_id_stand_id"]
    passage_key_id [name: "passage_key_id_passage_key_id"]
  }
}

Table "stand" {
  "id" int [pk, not null, increment]
  "name" varchar(40) [not null]
  "lat" float [not null]
  "lng" float [not null]
  "elevation" float [default: NULL]
  "parcours_id" int [default: NULL]
  "start_stand" int [default: NULL]
  "end_stand" int [default: NULL]
  "color" varchar(20) [not null]
  "chrono" tinyint(1) [not null]

  Indexes {
    parcours_id [name: "parcours_id"]
    end_stand [name: "end_stand_parcours_id"]
    start_stand [name: "start_stand_parcours_id"]
  }
}

Table "trace" {
  "id" int [pk, not null, increment]
  "name" varchar(40) [not null]
  "parcours_id" int [default: NULL]
  "start_id" int [not null]
  "end_id" int [not null]
  "trace" text [not null]
  "turn_nb" int [not null]

  Indexes {
    parcours_id [name: "parcours_id"]
    end_id [name: "end_id_stand_id"]
    start_id [name: "start_id_stand_id"]
  }
}

Table "user" {
  "id" int [pk, not null, increment]
  "creation_date" datetime [not null]
  "avatar" varchar(80) [not null]
  "name" varchar(40) [not null]
  "lastname" varchar(20) [not null]
  "password" varchar(80) [not null]
  "username" varchar(20) [not null]
  "email" varchar(80) [default: NULL]
  "phone" varchar(15) [default: NULL]
  "datenaiss" datetime [not null]
  "admin" tinyint(1) [not null]

  Indexes {
    username [unique, name: "username"]
  }
}

Ref "edition_ibfk_1":"event"."id" < "edition"."event_id"

Ref "editions_parcours_ibfk_1":"edition"."id" < "editions_parcours"."edition_id"

Ref "editions_parcours_ibfk_2":"parcours"."id" < "editions_parcours"."parcours_id"

Ref "event_ibfk_1":"user"."id" < "event"."createur_id"

Ref "inscription_ibfk_1":"user"."id" < "inscription"."user_id"

Ref "inscription_ibfk_2":"event"."id" < "inscription"."event_id"

Ref "inscription_ibfk_3":"edition"."id" < "inscription"."edition_id"

Ref "inscription_ibfk_4":"parcours"."id" < "inscription"."parcours_id"

Ref "parcours_ibfk_1":"event"."id" < "parcours"."event_id"

Ref "passage_ibfk_1":"passage_key"."id" < "passage"."key_id"

Ref "passage_ibfk_2":"inscription"."id" < "passage"."inscription_id"

Ref "passage_key_ibfk_1":"event"."id" < "passage_key"."event_id"

Ref "passage_key_ibfk_2":"edition"."id" < "passage_key"."edition_id"

Ref "passagekey_stand_ibfk_1":"passage_key"."id" < "passagekey_stand"."passage_key_id"

Ref "passagekey_stand_ibfk_2":"stand"."id" < "passagekey_stand"."stand_id"

Ref "stand_ibfk_1":"parcours"."id" < "stand"."parcours_id"

Ref "stand_ibfk_2":"parcours"."id" < "stand"."start_stand"

Ref "stand_ibfk_3":"parcours"."id" < "stand"."end_stand"

Ref "trace_ibfk_1":"parcours"."id" < "trace"."parcours_id"

Ref "trace_ibfk_2":"stand"."id" < "trace"."start_id"

Ref "trace_ibfk_3":"stand"."id" < "trace"."end_id"

